--- a/index.html
+++ b/index.html
@@ -6,30 +6,32 @@
     <title>Surat Cinta</title>
     <style>
         body {
-            font-family: 'Arial', sans-serif;
+            font-family: Arial, sans-serif;
             line-height: 1.6;
+            background-color: #f0f0f0;
             margin: 0;
             padding: 0;
-            background-color: #f0f0f0;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
         }
         .container {
+            width: 90%;
             max-width: 600px;
             background: white;
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            text-align: justify;
+            color: #333;
         }
         h1 {
             text-align: center;
-            color: #333;
+            margin-bottom: 20px;
         }
         p {
-            text-align: justify;
-            color: #555;
+            margin-bottom: 10px;
         }
     </style>
 </head>
@@ -38,12 +40,11 @@
         <h1>Surat Cinta</h1>
         <p>Sayangku,</p>
         <p>Tak terasa, kita sudah bersama melewati 4 bulan yang penuh cinta dan kebahagiaan. Setiap hari yang kita lalui, aku semakin menyadari betapa berharganya dirimu dalam hidupku. Kamu adalah bintang yang selalu menyinari jalanku, memberikan kehangatan dan kebahagiaan yang tak ternilai.</p>
-        <p> Aku berjanji untuk selalu belajar dan berusaha menjadi yang terbaik untukmu. Aku ingin menjadi pasangan yang bisa kamu banggakan, seseorang yang selalu ada di saat kamu membutuhkan. Hubungan ini sangat berarti bagiku, dan aku ingin kita terus melangkah ke depan bersama-sama, menghadapi segala tantangan dengan tangan yang saling menggenggam erat.</p>
-        <p> Aku mencintaimu dengan amat dalam, lebih dalam dari lautan dan lebih tinggi dari langit. Kamu adalah bagian dari hidupku yang tak tergantikan, dan aku tak bisa membayangkan hari-hariku tanpa hadirmu. Setiap senyummu adalah alasan bagiku untuk terus berjuang dan setiap tatapanmu adalah motivasi bagiku untuk menjadi lebih baik.</p>
-        <p> Jangan pernah tinggalkan aku, sayang. Aku benar-benar tidak tahu bagaimana harus melanjutkan hidup tanpamu. Kamu adalah alasan aku bangun setiap pagi dengan semangat dan tidur setiap malam dengan damai. Tanpamu, dunia ini terasa hampa dan tak bermakna.</p>
-        <p> Aku mencintaimu, sayangku, dengan segenap hatiku. Bersamamu, aku merasa lengkap dan bahagia. Terima kasih telah menjadi bagian dari hidupku dan memberikan cinta yang begitu tulus. Mari kita terus berjalan bersama, menciptakan lebih banyak kenangan indah dan menjadikan cinta kita semakin kuat dari hari ke hari.</p>
-        <p> Dari Mas mu, Reyvan :) </p>
+        <p>Aku berjanji untuk selalu belajar dan berusaha menjadi yang terbaik untukmu. Aku ingin menjadi pasangan yang bisa kamu banggakan, seseorang yang selalu ada di saat kamu membutuhkan. Hubungan ini sangat berarti bagiku, dan aku ingin kita terus melangkah ke depan bersama-sama, menghadapi segala tantangan dengan tangan yang saling menggenggam erat.</p>
+        <p>Aku mencintaimu dengan amat dalam, lebih dalam dari lautan dan lebih tinggi dari langit. Kamu adalah bagian dari hidupku yang tak tergantikan, dan aku tak bisa membayangkan hari-hariku tanpa hadirmu. Setiap senyummu adalah alasan bagiku untuk terus berjuang dan setiap tatapanmu adalah motivasi bagiku untuk menjadi lebih baik.</p>
+        <p>Jangan pernah tinggalkan aku, sayang. Aku benar-benar tidak tahu bagaimana harus melanjutkan hidup tanpamu. Kamu adalah alasan aku bangun setiap pagi dengan semangat dan tidur setiap malam dengan damai. Tanpamu, dunia ini terasa hampa dan tak bermakna.</p>
+        <p>Aku mencintaimu, sayangku, dengan segenap hatiku. Bersamamu, aku merasa lengkap dan bahagia. Terima kasih telah menjadi bagian dari hidupku dan memberikan cinta yang begitu tulus. Mari kita terus berjalan bersama, menciptakan lebih banyak kenangan indah dan menjadikan cinta kita semakin kuat dari hari ke hari.</p>
+        <p> Dari mas mu, Reyvan :)</p>
     </div>
-
 </body>
 </html>
